# SpaceShooter

./: .gitignore  .gitmodules  ABY_URUCHOMIĆ.txt  CMakeLists.txt  README.md
res/models/enemyShip2/: Trident-A10.mtl
res/models/powerups/doubleShooting/: doubleShots.max  doubleShots.mtl
res/models/powerups/health/: health.max  health.mtl
res/models/x-wing/: ship.mtl  x-wing.max  x-wing.mtl
res/shaders/: cubemapDepth.frag  cubemapDepth.gs  cubemapDepth.vert  screenbuffer.frag  shader.vs  shader2.fs  shaderPBR.frag
src/: CMakeLists.txt  Camera.h  GameManager.cpp  GameManager.h  GraphNode.h  Mesh.h  Model.h  Transform.cpp  main.cpp  main.cpp~RF1e1c73a5.TMP  main.cpp~RF33a5d70.TMP  main.cpp~RF3803bda.TMP
src/Headers/: Camera.h  DirLight.h  Framebuffer.h  GameManager.h  GraphNode.h  Light.h  Mesh.h  Model.h  PointLight.h  Shader.h  Skybox.h  Transform.h
src/Sources/: DirLight.cpp  Framebuffer.cpp  GameManager.cpp  GraphNode.cpp  Light.cpp  Mesh.cpp  Model.cpp  PointLight.cpp  Shader.cpp  Skybox.cpp  Transform.cpp
src/Utilities/: DebugUtils.h  FileManager.cpp  FileManager.h  GlobalVariables.cpp  GlobalVariables.h  IOManager.cpp  IOManager.h
